mathematician-mash/mathematician-mash_apps-v1_Deployment_mathematician-mash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mathematician-mash
  namespace: mathematician-mash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mathematician-mash
  template:
    metadata:
      labels:
        app: mathematician-mash
    spec:
      containers:
      - image: ghcr.io/berkeleymt/mathematician-mash:latest
        name: mathematician-mash
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 4Gi
          requests:
            cpu: 20m
            memory: 64Mi
        volumeMounts:
        - mountPath: /data
          name: data
      imagePullSecrets:
      - name: ghcr-auth
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mathematician-mash-data
