mathematician-mash/mathematician-mash_v1_Service_mathematician-mash.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathematician-mash
  namespace: mathematician-mash
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: mathematician-mash
